--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -21,7 +21,7 @@
     <h2>What should this page contain?</h2>
     <hr>
     <ul>
-      <li>A clear and concise description of your.</li>
+      <li>A clear and concise description</li>
       <li>A detailed explanation of why your team chose to work on this particular project.</li>
       <li>References and sources to document your research.</li>
       <li>Use illustrations and other visual resources to explain your project.</li>
