--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}">
+    <link href="{{ url_for('static', filename = 'style.css') }}" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://static.igem.wiki/common/icons/favicons/igem-2022.svg"/>
