--- a/wiki/menu.html
+++ b/wiki/menu.html
@@ -59,10 +59,10 @@
             Awards
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{{ url_for('pages', page='Awards-Part') }}">Part</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('pages', page='Awards-Model') }}">Model</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('pages', page='Awards-Inclusivity') }}">Inclusivity</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('pages', page='Awards-Education') }}">Education</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-part') }}">Part</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-model') }}">Model</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-inclusivity') }}">Inclusivity</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-education') }}">Education</a></li>
           </ul>
         </li>
 
