adding waves link

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -77,11 +77,11 @@
 
 
           <header>
-            <img src="/static/wave-1.svg" />
-            <img src="/static/wave-2.svg" />
-            <img src="/static/wave-3.svg" />
-            <img src="/static/wave-4.svg" />
-            <img src="/static/wave-5.svg" id="shape" />
+            <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
+            <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-2.svg" />
+            <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
+            <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
+            <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
             <h1>Collaborations</h1>
           </header>
 
