Home page loads default and changed what is under the engagement navbar

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -52,12 +52,9 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
                     <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-colloaborations">Collaborations</a>
-                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-communityengagement">Community Engagement</a>
                     <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/education">Education</a>
                     <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/inclusivity">Inclusivity</a>
-                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/human-practices">Integrated Human Practices</a>
-                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-partnership">Partnership</a>
-                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-sciencecommunication">Science Communication</a>
+                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/human-practices">Human Practices<a>                
                   </div>
                 </li>
                 <li class="nav-item dropdown">
