fixed mail and changed order of engagement in navbar

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -51,10 +51,11 @@
                     Engagement
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-colloaborations">Collaborations</a>
+                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/human-practices">Human Practices<a> 
                     <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/education">Education</a>
                     <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/inclusivity">Inclusivity</a>
-                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/human-practices">Human Practices<a>                
+                    <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-colloaborations">Collaborations</a>
+               
                   </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -140,7 +141,7 @@
     <section class="mb-2">
   
       <!-- Google -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="manipalbiomachines@manipal.edu" role="button"><i class="bi bi-envelope"></i></a>
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="mailto: manipalbiomachines@manipal.edu" role="button"><i class="bi bi-envelope"></i></a>
 
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/manipalbiomachines/" role="button"><i class="bi bi-instagram"></i></a>
