Changing bg color

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <body style="background: linear-gradient(to bottom, #d7f4fc, #52aec8);">
+      <body style="background: linear-gradient(180deg, #4BD9E8 6%, #108EAF 57%, #005C74 96%);">
         <div class="bar">  
-          <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d7f4fc;">
+          <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4BD9E8;">
               <a class="navbar-brand" href="#">MIT-MAHE</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
