--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -5,7 +5,7 @@
     <!-- CSS Files -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="{{ url_for('static', filename='waves.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <body style="background: linear-gradient(180deg, #4BD9E8 6%, #108EAF 57%, #005C74 96%);">
@@ -80,11 +80,11 @@
 
           <div class="banner">
             <header>
-              <img src="/static/wave-1.svg" />
-              <img src="/static/wave-2.svg" />
-              <img src="/static/wave-3.svg" />
-              <img src="/static/wave-4.svg" />
-              <img src="/static/wave-5.svg" id="shape" />
+              <img src= "https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-2.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
               <h1>Collaborations</h1>
             </header>
           </div>
