--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -47,7 +47,7 @@
                         <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/project-parts">Parts</a>
                       </div>
                   </li>
-                  <li class="nav-item dropdown active">
+                  <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Engagement
                     </a>
@@ -62,7 +62,7 @@
                       
                     </div>
                   </li>
-                  <li class="nav-item dropdown active">
+                  <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Awards
                     </a>
