--- a/wiki/menu.html
+++ b/wiki/menu.html
@@ -1,67 +1,86 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4BD9E8;">
-              <a class="navbar-brand" href="#">MIT-MAHE</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                      <a class="nav-link" href="{{ url_for('pages', page='home') }}">
-                        Home
-                      </a>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Team
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                        <a class="dropdown-item" href="{{ url_for('pages', page='team') }}">Meet the Team</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='attributions') }}">Attributions</a>
-                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Project
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                        <a class="dropdown-item" href="{{ url_for('pages', page='contribution') }}">Contributions</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='description') }}">Description</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='project-design') }}">Design</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='engineering') }}">Engineering Success</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='experiments') }}">Experiments</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='hardware') }}">Hardware</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='project-implementation') }}">Implementation</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='model') }}">Modeling</a>
-                        <a class="dropdown-item" href="{{ url_for('pages', page='project-parts') }}">Parts</a>
-                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Engagement
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-colloaborations') }}">Collaborations</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-communityengagement') }}">Community Engagement</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='education') }}">Education</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='inclusivity') }}">Inclusivity</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='human-practices') }}">Integrated Human Practices</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-partnership') }}">Partnership</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-sciencecommunication') }}">Science Communication</a>
-                      
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Awards
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-part') }}">Part</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-model') }}">Model</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-inclusivity') }}">Inclusivity</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-education') }}">Education</a>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+
+    <!---- TEAM NAME ---->
+    <a class="navbar-brand" href="#">MIT-MAHE</a>
+
+    <!---- SMALL SCREEN MENU ICON ---->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto left-aligned">
+
+        <!---- HOME ---->
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('pages', page='home') }}">Home</a>
+        </li>
+
+        <!---- TEAM ---->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="{{ url_for('pages', page='team') }}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Team
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='team') }}">Team</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='attributions') }}">Attributions</a></li>
+          </ul>
+        </li>
+
+        <!---- PROJECT ---->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Project
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='contribution') }}">Contribution</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='description') }}">Description</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='engineering') }}">Engineering</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='experiments') }}">Experiments</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='hardware') }}">Hardware</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='project-implementation') }}">Implementation</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='model') }}">Modeling</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='project-parts') }}">Parts</a></li>
+          </ul>
+        </li>
+
+        <!---- SAFETY ---->
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('pages', page='safety') }}">Safety</a>
+        </li>
+
+        <!---- HUMAN PRACTICES ---->
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('pages', page='human-practices') }}">Human Practices</a>
+        </li>
+
+        <!---- COLLOABORATION ---->
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('pages', page='engagement-collaborations') }}">Collaborations</a>
+          <a class="nav-link" href="{{ url_for('pages', page='engagement-communityengagement') }}">Community Engagement</a>
+          <a class="nav-link" href="{{ url_for('pages', page='education') }}">Education</a>
+          <a class="nav-link" href="{{ url_for('pages', page='inclusivity') }}">Inclusivity</a>
+          <a class="nav-link" href="{{ url_for('pages', page='human-practices') }}">Human Practices</a>
+          <a class="nav-link" href="{{ url_for('pages', page='engagement-partnership') }}">Partnership</a>
+          <a class="nav-link" href="{{ url_for('pages', page='engagement-sciencecommunication') }}">Science Communication</a>
+        </li>
+
+        <!---- AWARDS ---->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Awards
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-part') }}">Part</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-model') }}">Model</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-inclusivity') }}">Inclusivity</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='awards-education') }}">Education</a></li>
+          </ul>
+        </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
 
