--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -10,72 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <body style="background: linear-gradient(180deg, #4BD9E8 6%, #108EAF 57%, #005C74 96%);">
         <div class="bar">  
-          <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4BD9E8;">
-              <a class="navbar-brand" href="#">MIT-MAHE</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                      <a class="nav-link" href="https://2023.igem.wiki/mit-mahe/home">
-                        Home
-                      </a>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Team
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/team">Meet the Team</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/attributions">Attributions</a>
-                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Project
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/contribution">Contributions</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/description">Description</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/project-design">Design</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engineering">Engineering Success</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/experiments">Experiments</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/hardware">Hardware</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/project-implementation">Implementation</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/model">Modeling</a>
-                        <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/project-parts">Parts</a>
-                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Engagement
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-colloaborations">Collaborations</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-communityengagement">Community Engagement</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/education">Education</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/inclusivity">Inclusivity</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/human-practices">Integrated Human Practices</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-partnership">Partnership</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/engagement-sciencecommunication">Science Communication</a>
-                      
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Awards
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/awards-part">Part</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/awards-part">Model</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/awards-part">Inclusivity</a>
-                      <a class="dropdown-item" href="https://2023.igem.wiki/mit-mahe/awards-part">Education</a>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </nav>
+          {% include '../my-navbar.html' %}
           </div>
 
           <div class="banner">
@@ -203,7 +138,7 @@
 
       </body>
             <!-- Footer -->
-  {% include '../footer.html' %}
+  {% include '../my-footer.html' %}
   <!-- Footer -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
