--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -105,7 +105,7 @@
               </ul>
           </div>
             <!-- Content-->
-          {% block page_content %}{% endblock}
+          {% block page_content %}{% endblock %}
 
       </body>
             <!-- Footer -->
