--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <body style="background: linear-gradient(180deg, #4BD9E8 6%, #108EAF 57%, #005C74 96%);">
+      <body style="background: #FFFFFF;">
         <div class="bar">  
           <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4BD9E8;">
               <a class="navbar-brand" href="#">MIT-MAHE</a>
