--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -71,7 +71,7 @@
 
         <div class="content-container" style="display:flex;">
         <div class="sidebar">
-            <div class="d-flex flex-column flex-shrink-0 p-1 bg-light" id="saveme" style="width: 200px; height: 100vh; overflow-y: auto;">
+            <div class="d-flex flex-column flex-shrink-0 p-1 bg-light" id="saveme" style="width: 200px; height: 100vh; overflow-y: auto; position:fixed;">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
               <span class="fs-4">Sidebar</span>
