--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li>
-                <a href="#section5" class="nav-link link-dark">
+                <a href="#section5" class="nav-link link-dark" style="text-indent:30">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
                   5. iGEM IISER Bhopal
                 </a>
