--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -37,9 +37,9 @@
                 </a>
               </li>
               <li>
-                <a href="#section5" class="nav-link link-dark" style="text-indent:30">
+                <a href="#section5" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  5. iGEM IISER Bhopal
+                  5. iGEM IISER       Bhopal
                 </a>
               </li>
 
