--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -173,10 +173,10 @@
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
-                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-1.png" class="img-fluid mt-4" alt="Image 1" border: 3px solid #555>
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-1.png" class="img-fluid mt-4" alt="Image 1" style="border: 3px solid #555">
                         </div>
                         <div class="col-md-6">
-                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-2.png" class="img-fluid mt-4" alt="Image 2" border: 3px solid #555>
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-2.png" class="img-fluid mt-4" alt="Image 2" style="border: 3px solid #555">
                         </div>
                       </div>
                     </div>
