--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -93,7 +93,19 @@
       <div class="content">
                 <div class="m-2 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1"> Overview<br></p>
-                    
+                    <p class="mt -3sub-stuff"> <i>"Education is the most powerful weapon which you can use to change the world." 
+- Nelson Mandela.</i><br>
+<br>
+<p>The dynamic field of synthetic biology is an amalgamation of science and engineering which holds the potential for game-changing innovation and discovery. However, the general population is frequently ignorant of its profound impact because of ethical misconceptions and a lack of social awareness.<br>
+<br>
+In India, a developing country, encouraging the fast-paced development of synthetic biology presents unique difficulties, such as language limitations and a very diversified educational environment. These challenges emphasize the critical value of all-encompassing education and awareness programs.<br>
+<br>
+At MIT-MAHE, we have embarked on a mission to bridge this knowledge gap by creating educational content tailored to diverse audiences, from primary school students to working professionals. Our goal goes beyond expanding their understanding of synthetic biology; it encompasses illuminating potential career paths and debunking misconceptions , especially regarding genetically modified organisms (GMOs).<br>
+<br>
+The success of our project depends heavily on our educational outreach. We aim to fight the stigma and false information surrounding GMOs  by developing a concrete understanding of the biology of wastewater management and the usage of  antimicrobials like triclocarban in everyday life. Due to this knowledge, the public and other stakeholders are better equipped to generate educated judgments, which ultimately helps projects improve and ensures safety by encouraging constructive criticism.<br>
+<br>
+We aspire to foster mutual learning and dialogue, laying the foundation for active participation in shaping the future of synthetic biology through our workshops, age-appropriate presentations, social media, comic strips, activity booklet, blog, online talks and handbook. Education is our mission's bedrock, unlocking synthetic biology's transformative potential to address critical societal and environmental challenges.</p>
+
                   </div>
 
                 <div class='m-5' style="height: 50px">
