Update engagement-collaborations.html sidebar bg color, text colour; margin

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -6,8 +6,8 @@
 
         <div class="content-container" style="display:flex;">
         <div class="sidebar">
-            <div class="d-flex flex-column flex-shrink-0 p-1 bg-light" id="saveme" style="width: 200px; height: 100vh; overflow-y: auto; position:fixed;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+            <div class="d-flex flex-column flex-shrink-0 p-1" id="saveme" style="width: 200px; height: 100vh; overflow-y: auto; position: fixed; background-color: #3d3d3d;">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none" style="color: #c9ffe9;">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             </a>
             <hr>
@@ -91,7 +91,7 @@
 
 
       <div class="content">
-                <div class="m-4 mb-16">
+                <div class="m-2 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1">1. iGEM ABOA, Turku, Finland (May 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">iGEM season ropes in several important days that have contributed towards the well- being of our planet. World Environment Day (June 5) is a good day to be reminded of what the Earth is enduring and to always be showing our support. MIT-MAHE participated in a collaborative mission, initiated by ABOA where we fashioned a “Let us Save Our Planet From TCC” poster which portrayed our mission while aligning with the Environment Day spirit. </p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-aboa.jpg" class="img-fluid rounded mx-auto d-block mt-4">
