Adding education content

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -94,9 +94,9 @@
                 <div class="m-2 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1"> Overview<br></p>
                     <p class="mt-3 sub-stuff"> <i>"Education is the most powerful weapon which you can use to change the world." 
-- Nelson Mandela.</i><br>
+- Nelson Mandela.</i><br></p>
 <br>
-<p>The dynamic field of synthetic biology is an amalgamation of science and engineering which holds the potential for game-changing innovation and discovery. However, the general population is frequently ignorant of its profound impact because of ethical misconceptions and a lack of social awareness.<br>
+<p class="mt-5 sub-stuff">The dynamic field of synthetic biology is an amalgamation of science and engineering which holds the potential for game-changing innovation and discovery. However, the general population is frequently ignorant of its profound impact because of ethical misconceptions and a lack of social awareness.<br>
 <br>
 In India, a developing country, encouraging the fast-paced development of synthetic biology presents unique difficulties, such as language limitations and a very diversified educational environment. These challenges emphasize the critical value of all-encompassing education and awareness programs.<br>
 <br>
@@ -105,6 +105,13 @@ At MIT-MAHE, we have embarked on a mission to bridge this knowledge gap by creat
 The success of our project depends heavily on our educational outreach. We aim to fight the stigma and false information surrounding GMOs  by developing a concrete understanding of the biology of wastewater management and the usage of  antimicrobials like triclocarban in everyday life. Due to this knowledge, the public and other stakeholders are better equipped to generate educated judgments, which ultimately helps projects improve and ensures safety by encouraging constructive criticism.<br>
 <br>
 We aspire to foster mutual learning and dialogue, laying the foundation for active participation in shaping the future of synthetic biology through our workshops, age-appropriate presentations, social media, comic strips, activity booklet, blog, online talks and handbook. Education is our mission's bedrock, unlocking synthetic biology's transformative potential to address critical societal and environmental challenges.</p>
+<p class="mt-5 sub-stuff"> <b>Communicating Science to High School Students</b><br>
+High School students in India are taught biology well in compliance with the educational curriculum. However, the definition of biology in India has become restricted to becoming a practicing medical doctor due to societal pressure, and thus, very rarely do students begin to explore the non-anatomy side of biology. Textbooks in India discuss genetic engineering and not Synthetic biology, making this a new concept for most students. New concepts and their potential applications in their daily life tend to ignite any student’s interest, which is why we chose to discuss synthetic biology with them. To help them explore how a new field can assist their daily life, given that suitable precautions are taken.<br>
+Our primary aim with high school students was to teach them the basics of synthetic biology. We taught them concepts like the central dogma of life, applications of synthetic biology and genetic engineering principles.<br>
+We were able to successfully conduct these sessions with the help of a few animations for easy understanding—
+We also conducted a Codon Chart Activity for students to understand the concept of translation better. We linked various amino acids to single alphabets and provided them with a code which spelt out an iconic phrase— “I AM BOND.” 
+Our team members were able to visit several high schools across the states of Karnataka, Tamil Nadu and Maharashtra.<br>
+</p>
 
                   </div>
 
